# Desktop-Organiser

./: .gitignore  README.md  nohup.out  organise.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
